--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: CompSci Blogs
 description: "August 2023 to June 2024"
-owner_name: Nighthawk Coders
-github_username: nighthawkcoders
-baseurl: "/student"
-remote_theme: pages-themes/midnight@v0.2.0
-# remote_theme: pages-themes/dinky@v0.2.0
+owner_name: rliao
+github_username: rliao569
+baseurl: "/Frontend-CSP"
+# remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/dinky@v0.2.0
 # remote_theme: pages-themes/minimal@v0.2.0
 # remote_theme: pages-themes/hacker@v0.2.0
 # remote_theme: pages-themes/cayman@v0.2.0
